--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       "__esModule": true
     };
   </script>
-  <script src="./dist/renderer.js"></script>
+  <script src="./dist/src/renderer.js"></script>
 </body>
 
 </html>
